# jj-starship

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release.yml  test.yml  update-flake-lock.yml
src/: jj.rs  main.rs  output.rs
